# bible-translations

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  README.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml
NABRE/NABRE_books/: 1 Chronicles.json  1 Corinthians.json  1 John.json  1 Kings.json  1 Maccabees.json  1 Peter.json  1 Samuel.json  1 Thessalonians.json  1 Timothy.json  2 Chronicles.json  2 Corinthians.json  2 John.json  2 Kings.json  2 Maccabees.json  2 Peter.json  2 Samuel.json  2 Thessalonians.json  2 Timothy.json  3 John.json  Acts.json  Amos.json  Baruch.json  Colossians.json  Daniel.json  Deutronomy.json  Ecclesiastes.json  Ephesians.json  Esther.json  Exodus.json  Ezikiel.json  Ezra.json  Galatians.json  Genesis.json  Habakkuk.json  Haggai.json  Hebrews.json  Hosea.json  Isiah.json  James.json  Jeremiah.json  (+33 more)
src/bible_translations/: constants.py  core.py  exceptions.py
src/bible_translations/models/: book.py  chapter.py  info.py  verse.py
src/bible_translations/translations/: base.py  bible_gateway.py  kjv.py
src/bible_translations/utils/: exporter.py
src/bible_translations/utils/fetch/: bible_gateway.py
tests/: test_core.py  test_exports.py  test_kjv.py
