[project]
name = "bible-translations"
version = "0.1.0"
description = "A package to fetch and provide you all the Bible translations available on the internet."
authors = [
    { name="Jaden Zaleski", email="jadenzaleski@icloud.com" },
]
maintainers = [
    { name="Jaden Zaleski", email="jadenzaleski@icloud.com" },
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = [
    "bible",
    "translation",
    "holy",
    "scrape",
    "fetch"
]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Topic :: Religion",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/jadenzaleski/bible-translations"
Documentation = "https://github.com/jadenzaleski/bible-translations/wiki"
Issues = "https://github.com/jadenzaleski/bible-translations/issues"
Changelog = "https://github.com/jadenzaleski/bible-translations/releases"

[project.scripts]
bt = "bible_translations.core:main"
bible-translations = "bible_translations.core:main"

[build-system]
requires = [
    "setuptools>=80.9.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "aiohttp",
    "beautifulsoup4",

]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I"
]

[tool.ruff.format]
line-ending = "lf"